crates/llms/src/chat/nsql/snapshots/llms__chat__nsql__tests__sql_gen_default_with_failed_attempt.snap
---
source: crates/llms/src/chat/nsql/mod.rs
expression: req_str
---
{
  "messages": [
    {
      "role": "system",
      "content": "Task: Write a SQL query to answer this question: _\\\"SELECT * FROM table\\\"_. Instruction: Return only valid SQL code, nothing additional, don't wrap it in ```. Columns with capitals must be quoted. For tables with schemas and catalogs '\"catalog\".\"schema\".\"table\"' not '\"catalog.schema.table\"'.\nUse incorrectly written SQL queries and associated errors below to ensure that the new query avoids repeating the same mistakes or generating identical queries:\n\nsql: `SELECT * FROM \"spice.public.table\" LIMIT 1`\nerror: `Error during planning: table 'spice.public.spice.public.table' not found`\n\n"
    }
  ],
  "model": "model_id",
  "response_format": {
    "type": "text"
  }
}
