crates/llms/src/chat/nsql/snapshots/llms__chat__nsql__tests__sql_gen_structured.snap
---
source: crates/llms/src/chat/nsql/mod.rs
expression: req_str
---
{
  "messages": [
    {
      "role": "system",
      "content": "Task: Write a SQL query to answer this question: _\\\"SELECT * FROM table\\\"_. Instruction: Return only valid SQL code, nothing additional, don't wrap it in ```. Columns with capitals must be quoted. For tables with schemas and catalogs '\"catalog\".\"schema\".\"table\"' not '\"catalog.schema.table\"'."
    }
  ],
  "model": "model_id",
  "response_format": {
    "type": "json_schema",
    "json_schema": {
      "name": "sql_mode",
      "schema": {
        "$schema": "https://json-schema.org/draft/2020-12/schema",
        "title": "StructuredNsqlOutput",
        "type": "object",
        "properties": {
          "sql": {
            "type": "string"
          }
        },
        "required": [
          "sql"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  }
}
